--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         background-image: url('./background.jpeg');
         background-size: cover;
         background-repeat: no-repeat;
-        background-position: fixed;
+        background-position: center;
         background-color: rgba(246, 229, 174)
       }
     </style>
