--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+        height: 100vh;
         background-color: rgba(246, 229, 174)
       }
     </style>
